--- a/templates/index.html
+++ b/templates/index.html
@@ -77,8 +77,8 @@
             Bite Buddies
         </div>
         <nav>
-            <a href="#">Become a Partner</a>
-            <a href="#">About Us</a>
+            <a href="{{ url_for('partner') }}">Become a Partner</a>
+            <a href="{{ url_for('about') }}">About Us</a>
         </nav>
     </header>
     <main>
