--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #F8F4EC;
+            background-color: #f8f5e9;
             color: #000;
         }
         header {
@@ -74,7 +74,6 @@
     <header>
         <div class="logo">
             <img src="{{ url_for('static', filename='logo-placeholder.png') }}" alt="Bite Buddies Logo">
-            Bite Buddies
         </div>
         <nav>
             <a href="{{ url_for('partner') }}">Become a Partner</a>
