--- a/templates/partner.html
+++ b/templates/partner.html
@@ -87,7 +87,7 @@
         </div>
         <div id="form-container" class="form-container">
             <!-- Register Form -->
-            <form id="register-form" class="form-container">
+            <form id="register-form" class="form-container" action="{{ url_for('partner_register') }}" method="POST">
                 <label for="restaurant-name">Restaurant Name:</label>
                 <input type="text" id="restaurant-name" name="restaurant-name" placeholder="Enter your restaurant name">
                 
@@ -95,13 +95,13 @@
                 <input type="email" id="email" name="email" placeholder="Enter your email">
                 
                 <label for="phone">Phone Number:</label>
-                <input type="text" id="phone" name="phone" placeholder="Enter your phone number">
+                <input type="tel" name="phone" placeholder="Enter your phone number">
                 
                 <label for="address">Address:</label>
                 <input type="text" id="address" name="address" placeholder="Enter your address">
                 
                 <label for="plz">PLZ:</label>
-                <input type="text" id="plz" name="plz" placeholder="Enter your PLZ">
+                <input type="number" id="plz" name="plz" placeholder="Enter your PLZ">
                 
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" placeholder="Enter your password">
@@ -111,7 +111,7 @@
             </form>
 
             <!-- Login Form -->
-            <form id="login-form" class="form-container" style="display: none;">
+            <form id="login-form" class="form-container" action="{{ url_for('partner_login') }}" method="POST" style="display: none;">
                 <label for="login-email">Email:</label>
                 <input type="email" id="login-email" name="login-email" placeholder="Enter your email">
                 
@@ -137,5 +137,14 @@
             }
         }
     </script>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <script>
+                {% for message in messages %}
+                    alert("{{ message }}");
+                {% endfor %}
+            </script>
+        {% endif %}
+    {% endwith %}
 </body>
 </html>
