--- a/templates/login.html
+++ b/templates/login.html
@@ -71,10 +71,10 @@
 </head>
 <body>
   <div class="logo">
-    <img src="logo.png" alt="Bite Buddies Logo" />
+    <img src="{{ url_for('static', filename='logo-placeholder.png') }}" alt="Bite Buddies Logo">
   </div>
   <div class="login-container">
-    <form>
+    <form action="{{ url_for('login') }}" method="POST">
       <div class="input-group">
         <label for="email">Email :</label>
         <input type="email" id="email" name="email" required />
